# tsp-types

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
generator/: generate_protocol.py
protocol/: tsp.json  tspSupplemental.ts
src/: lib.rs  protocol.rs  requests.rs  types.rs
